--- a/ResumeAssignment/css/ResumeAssignment.css
+++ b/ResumeAssignment/css/ResumeAssignment.css
@@ -12,9 +12,20 @@ ResumeAssignment
 
 /* GLOBAL STYLES
 ---------------------------------*/
+html {
+    box-sizing: border-box;
+}
+
+*, *:before,*:after {
+    box-sizing: inherit;
+}
+
+html,body {
+    height: 100%;
+}
 body {
     background: #92C9B1;
-
+    margin: 0;
 }
 /* links */
 a {
@@ -40,6 +51,11 @@ footer a:hover {
     text-decoration: none;
 }
 
+.content-wrapper {
+    margin: 0 auto;
+    padding: 30px;
+    max-width: 900px;
+}
 
 /* HOME
 ---------------------------------*/
@@ -49,17 +65,47 @@ footer a:hover {
 }
 
 .home .content-wrapper {
-    background: rgb(255 255 255 / 0.6);
+    background: rgb(255 255 255 / 0.9);
 }
 
 /* RESUME
 ------------------------------------*/
+.header::before {
+    background: url(../placeholderimages/sharon-mccutcheon-unsplash.jpg) center;
+    background-size: cover;
+    content: "";
+    display: block;
+    height: 375px;
+  }
 
+  .Resume-section {
+    margin-bottom: 50px;
+  }
+
+  .Resume-section h2 {
+    border-bottom: 2px dashed #293241;
+  }
+
+  .Download-link {
+    position: fixed;
+    top: 5px;
+    left: 5px;
+  }
 /* PROFILE
 ---------------------------------*/
 
 /* PROJECTS
 ---------------------------------*/
+.project-item {
+    display: flow-root;
+    margin:30px 0;
+}
+
+.project-item img {
+    width: 300px;
+    float: left;
+    margin-right: 20px;
+}
 
 /* WORK EXPERIENCE
 ---------------------------------*/
@@ -73,4 +119,17 @@ footer a:hover {
 footer { 
     background:#293241;
     color:#E0FBFC;
+}
+
+.socials { 
+    list-style-type: none;
+    padding: 0;
+}
+
+.socials img {
+    width: 32px;
+}
+
+.socials li {
+    display: inline-block;
 }
