--- a/ResumeAssignment/css/ResumeAssignment.css
+++ b/ResumeAssignment/css/ResumeAssignment.css
@@ -24,6 +24,7 @@ html,body {
     height: 100%;
 }
 body {
+    font-family: 'Times New Roman', Times, serif;
     background: #92C9B1;
     margin: 0;
 }
@@ -57,6 +58,9 @@ footer a:hover {
     max-width: 900px;
 }
 
+h1, h2 {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
 /* HOME
 ---------------------------------*/
 .home {
